# Rin

./: .env-docker-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  changelog.md  pyproject.toml
.github/workflows/: auto-merge.yml  codeql-analysis.yml  docker-build-ghcr.yml  docker-build-hub-alpine.yml  docker-build-hub.yml  docker-build.yml  release.yml  snyk.yml
Arch-Docker/: Dockerfile
Bot/: rinbot.py  rincore.py
Bot/Cogs/: advice.py  anilist.py  blue-alliance.py  bot-info.py  discord-bots.py  first-frc-events.py  github.py  help.py  hypixel.py  interaction-failure-handler.py  ipc.py  jikan.py  jisho.py  mangadex.py  mcsrvstats.py  modrinth.py  myanimelist.py  reddit.py  rin.py  rinhelp.py  rininfo.py  spiget.py  tenor.py  top-gg.py  twitch.py  twitter.py  version.py  waifu-generator.py  youtube.py
Bot/exceptions/: __init__.py  main.py
Community/: contributing.md  getting-dev-discord-bot.md  getting-started-guide.md  installing-requirements.md
Docker/: Dockerfile  start.sh
Docker/Alpine-Docker/: Dockerfile  start.sh
Docker/Debian-Docker/: Dockerfile
Help-Data/: help_data.csv  help_data_2.csv
Ubuntu-Docker/: Dockerfile
