[tool.poetry]
name = "Rin"
version = "2.3.0"
description = "A Discord bot focused on obtaining data from third-party services with lighting performance in mind"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
py-cord = {extras = ["voice"], version = "^2.5.0"}
python-dotenv = "^1.0.1"
uvloop = "^0.19.0"
aiodns = "^3.1.1"
Brotli = "^1.1.0"
orjson = "^3.9.15"
pysimdjson = "^5.0.2"
asyncpraw = "^7.7.1"
gql = {extras = ["aiohttp"], version = "^3.4.1"}
rin-exceptions = "^1.0.3"
numpy = "^1.26.4"
ciso8601 = "^2.3.1"
better-ipc = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"


[tool.poetry.group.db.dependencies]
tortoise-orm = "^0.20.0"
asyncpg = "^0.29.0"


[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
